tests/ivg/invalid/text_missing_font.ivg
format IVG-3
// text without font
text at:0,0 "hi"
